--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -1564,6 +1564,10 @@ input.frm_insert_in_template {
 	margin-top: var(--gap-md) !important;
 }
 
+.frm-mt-lg {
+	margin-top: var(--gap-lg) !important;
+}
+
 .frm-mt-auto {
 	margin-top: auto !important;
 }
@@ -1906,6 +1910,24 @@ a.frm_hidden,
 	width: 1px;
 	height: 12px;
 	background-color: var(--grey-300);
+}
+
+.frm-admin-full-screen #adminmenumain,
+.frm-admin-full-screen #wpadminbar,
+.frm-admin-full-screen #adminmenuback,
+.frm-admin-full-screen #adminmenuwrap,
+.frm-admin-full-screen #wpfooter {
+	display: none;
+}
+
+.frm-admin-full-screen #wpcontent,
+.frm-admin-full-screen.auto-fold #wpcontent {
+	margin: 0;
+	padding: 0;
+}
+
+.frm-admin-full-screen.appearance_page_starter-templates #wpbody-content {
+	padding: 0;
 }
 /* End Helper Classes */
 
