--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -43,6 +43,7 @@
 	--success-25: #f6fef9;
 	--border-radius: 35px;
 	--small-radius: 8px;
+	--medium-radius: 16px;
 	--small-sidebar: 275px;
 	--medium-sidebar: 350px;
 	--big-sidebar: 390px;
@@ -1552,6 +1553,10 @@ input.frm_insert_in_template {
 	margin-top: 0 !important;
 }
 
+.frm-mt-2xs {
+	margin-top: var(--gap-2xs) !important;
+}
+
 .frm-mt-xs {
 	margin-top: var(--gap-xs) !important;
 }
@@ -1599,6 +1604,11 @@ input.frm_insert_in_template {
 
 .frm-ml-auto {
 	margin-left: auto;
+}
+
+.frm-mx-0 {
+	margin-left: 0 !important;
+	margin-right: 0 !important;
 }
 
 .frm-mx-xs {
@@ -2391,10 +2401,35 @@ h2.frm-h2 + .howto {
 }
 
 .frm-card-box {
+	max-width: 500px;
 	background-color: #fff;
 	border-radius: var(--small-radius);
 	padding: var(--gap-lg);
 	box-shadow: var(--box-shadow-sm);
+}
+
+.frm-card-box.frm-has-progress-bar {
+	position: relative;
+	overflow: hidden;
+	border-radius: var(--medium-radius);
+}
+
+.frm-card-box-progress-bar {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	height: 8px;
+	background-color: var(--primary-25);
+}
+
+.frm-card-box-progress-bar > span {
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	width: 33%;
+	background-color: var(--primary-500);
 }
 
 .frm-card-box-header  {
@@ -8270,7 +8305,8 @@ button.frm_choose_image_box,
 .wp-admin .frm_wrap select,
 .field-group textarea,
 .field-group input[type="text"],
-.field-group select {
+.field-group select,
+.frm-fields .frm-input-field {
 	outline: 0;
 	box-shadow: none;
 	border-radius: var(--small-radius);
@@ -8377,7 +8413,8 @@ button.frm_choose_image_box,
 .field-group textarea,
 .field-group input[type="text"],
 .field-group select,
-.accordion-container input.hex {
+.accordion-container input.hex,
+.frm-fields .frm-input-field {
 	width: 100%;
 	outline: 0;
 }
