--- a/css/admin/onboarding-wizard.css
+++ b/css/admin/onboarding-wizard.css
@@ -22,12 +22,15 @@ html.wp-toolbar {
 	box-sizing: border-box;
 }
 
-.frm-onboarding-bg {
+#frm-onboarding-bg {
 	position: absolute;
 	top: 0;
 	right: 0;
 	bottom: 0;
 	left: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	z-index: 1;
 }
 
