--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -37,6 +37,7 @@
 	--orange: #F15A24;
 	--pink: rgb(226, 42, 110);
 	--purple: rgb(141, 53, 245);
+	--success-900: #054F31;
 	--success-800: #065F46;
 	--success-500: #12b76a;
 	--success-100: #D1FAE5;
@@ -1642,6 +1643,10 @@ input.frm_insert_in_template {
 
 .frm-p-sm,
 .frm-p-4 {
+	padding: var(--gap-sm) !important;
+}
+
+.frm-p-sm {
 	padding: var(--gap-sm) !important;
 }
 
@@ -9450,6 +9455,10 @@ Responsive Design
 	background: var(--primary-25);
 }
 
+.frm-cta.frm-cta-border {
+	border: 1px solid var(--primary-200);
+}
+
 .frm-cta h4 {
 	font-weight: 600;
 	margin: 0;
@@ -9462,6 +9471,10 @@ Responsive Design
 .frm-cta-green .frm-banner-title {
 	gap: calc(var(--gap-2xs) + 1px);
 	color: var(--grey-700);
+}
+
+.frm-cta-green.frm-cta-border {
+	border-color: var(--success-100)
 }
 
 .frm-right-panel .inside .frm_pro_tip,
@@ -9634,3 +9647,38 @@ Responsive Design
 	border-color: #135e96;
 }
 /* End Pirate forms importer */
+
+/* Start Option Box */
+.frm-option-box {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	font-size: 14px;
+	font-weight: 500;
+	background: var(--primary-25);
+	padding: 12px var(--gap-sm);
+	border: 1px solid var(--primary-200);
+	border-radius: var(--small-radius);
+	margin-bottom: var(--gap-xs);
+	cursor: pointer;
+}
+
+.frm-option-box.frm-disabled {
+	background-color: #fff;
+	border-color: var(--grey-200);
+	cursor: default;
+}
+
+.frm-option-box input[type="checkbox"] {
+	margin: 0;
+}
+
+.frm-option-box.frm-disabled input[type="checkbox"] {
+	background-color: var(--grey-100);
+	border-color: var(--grey-300) !important;
+}
+
+.frm-option-box.frm-disabled input[type="checkbox"]::before {
+	filter: brightness(0) saturate(0%) invert(72%);
+}
+/* End Option Box */
