Add ajax check plugin activation

--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -9714,23 +9714,26 @@ Responsive Design
 }
 /* End Option Box */
 
-/* Start Form Error */
-.frm-form-error:not(.frm_hidden) {
+/* Start Validation Error */
+.frm-validation-error:not(.frm_hidden) {
 	display: flex;
 }
 
-.frm-form-error {
+.frm-validation-error {
 	gap: calc(var(--gap-xs) + var(--gap-2xs));
 }
 
-.frm-form-error span {
-	display: none;
+.frm-validation-error span {
 	color: var(--error-500);
 }
 
-.frm-form-error[frm-error="empty"] span[frm-error="empty"],
-.frm-form-error[frm-error="invalid"] span[frm-error="invalid"],
-.frm-form-error[frm-error="custom"] span[frm-error="custom"] {
+.frm-validation-error span[frm-error] {
+	display: none;
+}
+
+.frm-validation-error[frm-error="empty"] span[frm-error="empty"],
+.frm-validation-error[frm-error="invalid"] span[frm-error="invalid"],
+.frm-validation-error[frm-error="custom"] span[frm-error="custom"] {
 	display: inline-block;
 }
 
