--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -3356,90 +3356,27 @@ a.frm_option_icon:hover::before {
 	border: none;
 	position: relative;
 }
-
-.frm-right-panel .accordion-section-title:before,
-.frm-right-panel .accordion-section-title:after {
-	content: "\e913" !important;
-	font-family: "s11-fp" !important;
-	font-size: 18px;
-	font-variant: normal;
-	text-rendering: auto;
-	vertical-align: text-top;
-}
-
-.frm-right-panel .accordion-section-title:after {
-	top: calc(50% - 10px) !important;
-}
-
-.frm-right-panel .open .accordion-section-title:after {
-	content: "\e62a" !important;
-}
-
-.frm-right-panel .accordion-section-title:before {
-	content: "\f1de" !important;
-	color: var(--grey);
-	font-size: 17px !important;
+.frm-right-panel .accordion-section-title > .frmsvg:first-child {
 	margin: 0 10px 0 0;
+	color: var(--grey);
+}
+.frm-right-panel .accordion-section-title > .frmsvg:last-child {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	margin: auto;
+	color: var(--grey);
+}
+.frm-right-panel .accordion-section-title:hover > .frmsvg:first-child {
+	color: var(--grey-900);
 }
 
-.form-title-style .accordion-section-title:before,
-.section-fields-style .accordion-section-title:before {
-	content: "\f1dc" !important;
+.frm-right-panel .open .accordion-section-title > .frmsvg:last-child {
+	transform: rotate(180deg);
 }
-
-.form-description-style .accordion-section-title:before {
-	content: "\e90f" !important;
-}
-
-.field-colors-style .accordion-section-title:before {
-	content: "\e96d" !important;
-}
-
-.field-sizes-style .accordion-section-title:before {
-	content: "\e920" !important;
-}
-
-.field-labels-style .accordion-section-title:before {
-	content: "\e953" !important;
-}
-
-.field-description-style .accordion-section-title:before{
-	content: "\e611" !important;
-}
-
-.check-box-radio-fields-style .accordion-section-title:before{
-	content: "\f14a" !important;
-}
-
-.buttons-style .accordion-section-title:before{
-	content: "\e911" !important;
-}
-
-.repeater-fields-style .accordion-section-title:before{
-	content: "\e974" !important;
-}
-
-.toggle-fields-style .accordion-section-title:before{
-	content: "\f205" !important;
-}
-
-.slider-fields-style .accordion-section-title:before{
-	content: "\f386" !important;
-}
-
-.form-messages-style .accordion-section-title:before{
-	content: "\e915" !important;
-}
-
-.date-fields-style .accordion-section-title:before{
-	content: "\f073" !important;
-}
-
-.progress-bars-style .accordion-section-title:before{
-	content: "\e939" !important;
-}
-.ranking-fields-style .accordion-section-title:before{
-	content: "\e948" !important;
+.frm-right-panel .accordion-section-title:after{
+	content: '' !important;
 }
 #frm_view_editor_left.frm-right-panel .accordion-section-title,
 .frm-right-panel h3.accordion-section-title {
