--- a/css/admin/onboarding-wizard.css
+++ b/css/admin/onboarding-wizard.css
@@ -35,6 +35,11 @@ html.wp-toolbar {
 	z-index: 1;
 }
 
+#frm-onboarding-bg img {
+	min-height: 80%;
+	max-height: 1200px;
+}
+
 #frm-onboarding-container {
 	position: relative;
 	min-height: 100vh;
