--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -6440,6 +6440,10 @@ ul.start_divider {
 	display: none !important;
 }
 
+.edit_field_type_submit .frm_more_options_li:not(:last-child) {
+	display: none !important;
+}
+
 .frm_no_section_fields:not(.frm_block) + ul.start_divider {
 	padding: 0;
 	min-height: 132px;
@@ -6738,6 +6742,10 @@ tr.frm_options_heading td {
 
 .frm-empty-fields .frm_updated_message ~ .frm_no_fields {
 	top: 60px;
+}
+
+#frm_form_editor_container:not(.frm-has-fields) #frm-show-fields > .frm_field_box:last-child {
+	visibility: hidden;
 }
 
 .frm-has-fields .frm_no_fields {
