--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -9509,13 +9509,15 @@ Responsive Design
 /* Inbox slide-in */
 #frm_inbox_slide_in {
 	position: fixed;
-	bottom: 50px;
-	right: 50px;
+	/* Use the same bottom/right values as floating links. */
+	bottom: 48px;
+	right: 48px;
 	min-width: 300px;
 	max-width: 380px;
 	flex-direction: column;
 	align-items: center;
 	z-index: 3; /* We want the pop up to appear aboe the video in the dashboard. */
+	box-shadow: 0 11px 22px -5px rgba(16, 24, 40, 0.18); /* Use the same box shadow as the floating liks */
 }
 #frm_inbox_slide_in img {
 	max-width: 100%;
