Fix a JS bug, hide the honeypot when you click no in the review

--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -1565,6 +1565,10 @@ input.frm_insert_in_template {
 	margin-top: var(--gap-lg);
 }
 
+#frmapi-feedback [class^="frm__"] {
+	display: none;
+}
+
 .frm-review-notice .frm_error,
 .frm-review-notice label {
 	color: #444;
