--- a/css/packages/s11-floating-links.css
+++ b/css/packages/s11-floating-links.css
@@ -180,6 +180,7 @@
 }
 #frm_inbox_slide_in img {
 	max-width: 100%;
+	border-radius: var(--small-radius);
 }
 #frm_inbox_slide_in .frm-button-primary {
 	margin: auto;
