Refactor arrows, optimize SVG

--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -9755,5 +9755,6 @@ Responsive Design
 .frm-link-with-external-icon .frmsvg {
 	width: 16px;
 	height: 16px;
+	transform: rotate(45deg);
 }
 /* End External Link Styles */
