--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -2125,7 +2125,7 @@ form .form-field.frm_field_loading {
 }
 
 .frm_error {
-	color: #B94A48;
+	color: #F04438;
 }
 
 form .frm_blank_field input,
@@ -2133,15 +2133,15 @@ form .frm_blank_field textarea,
 form .frm_blank_field select,
 form .frm_blank_field .frm-g-recaptcha iframe,
 form .frm_blank_field .g-recaptcha iframe {
-	border-color: #B94A48;
+	border-color: #F04438;
 }
 
 form .frm_blank_field label {
-	color: #B94A48;
+	color: #F04438;
 }
 
 .frm_required {
-	color: #B94A48;
+	color: #F04438;
 }
 
 .with_frm_style .wp-editor-container textarea,
