--- a/css/frm_grids.css
+++ b/css/frm_grids.css
@@ -12,30 +12,30 @@
 	word-wrap: normal !important; /* many screen reader and browser combinations announce broken words as they would appear visually */
 }
 .frm_screen_reader.frm_hidden{
-	display:initial;
+	display: initial;
 }
 
 .frm_clear_none{
-	clear:none;
+	clear: none;
 }
 
 .frm_clear{
-	clear:both;
+	clear: both;
 }
 
 .frm_form_field.frm_alignright{
-	float:right !important;
+	float: right !important;
 }
 
 .with_frm_style .frm_form_field{
-	clear:both;
+	clear: both;
 }
 
 .frm_combo_inputs_container,
 .frm_grid_container,
 .frm_form_fields .frm_section_heading,
 .frm_form_fields .frm_fields_container{
-	display:grid;
+	display: grid;
 	grid-template-columns: repeat(12, 1fr);
 	grid-auto-rows: max-content;
 	grid-gap: 0 2%;
@@ -56,7 +56,7 @@
 .frm_submit.frm_inline,
 .frm_form_field.frm_right_inline,
 .frm_form_field.frm_last_inline{
-	width:auto;
+	width: auto;
 	grid-column: span 2 / span 2;
 }
 
@@ -71,7 +71,7 @@
 .frm_form_field.frm_last_half,
 .frm_form_field.frm_half,
 .frm_submit.frm_half{
-	grid-column:span 6 / span 6;
+	grid-column: span 6 / span 6;
 }
 
 .frm4,
@@ -85,7 +85,7 @@
 .frm_form_field.frm_right_third,
 .frm_form_field.frm_first_third,
 .frm_form_field.frm_last_third{
-	grid-column:span 4 / span 4;
+	grid-column: span 4 / span 4;
 }
 
 .frm8,
@@ -188,13 +188,13 @@
 .frm_full > input:not([type='checkbox']):not([type='radio']):not([type='button']),
 .frm_full select,
 .frm_full textarea{
-	width:100% !important;
+	width: 100% !important;
 	grid-column: span 12/span 12;
 	box-sizing: border-box;
 }
 
 .frm_full .wp-editor-wrap input{
-	width:auto !important;
+	width: auto !important;
 }
 
 .frm_first,
@@ -214,20 +214,20 @@
 .frm_form_field.frm_first_eighth,
 .frm_form_field.frm_first_inline,
 .frm_form_field.frm_first{
-	grid-column-start:1;
+	grid-column-start: 1;
 }
 
 .frm_last,
 .frm_form_field.frm_last,
 .frm_form_field.frm_alignright{
-	grid-column-end:-1;
+	grid-column-end: -1;
 	justify-content: end;
 }
 
 /* RTL Grids */
 
 .with_frm_style.frm_rtl .frm_form_fields .star-rating{
-	float:right;
+	float: right;
 }
 
 .with_frm_style.frm_rtl .frm_grid .frm_primary_label,
@@ -239,8 +239,8 @@
 .with_frm_style.frm_rtl .frm_grid .frm_checkbox,
 .with_frm_style.frm_rtl .frm_grid_first .frm_checkbox,
 .with_frm_style.frm_rtl .frm_grid_odd .frm_checkbox{
-	float:right !important;
-	margin-right:0 !important;
+	float: right !important;
+	margin-right: 0 !important;
 }
 
 .with_frm_style.frm_rtl .frm_grid_first .frm_radio label input,
@@ -249,18 +249,18 @@
 .with_frm_style.frm_rtl .frm_grid_first .frm_checkbox label input,
 .with_frm_style.frm_rtl .frm_grid .frm_checkbox label input,
 .with_frm_style.frm_rtl .frm_grid_odd .frm_checkbox label input{
-	float:left;
+	float: left;
 }
 
 .with_frm_style.frm_rtl .frm_catlevel_2,
 .with_frm_style.frm_rtl .frm_catlevel_3,
 .with_frm_style.frm_rtl .frm_catlevel_4,
 .with_frm_style.frm_rtl .frm_catlevel_5{
-	margin-right:18px;
+	margin-right: 18px;
 }
 
 .with_frm_style.frm_rtl div > .frm_time_select{
-	margin-right:5px;
+	margin-right: 5px;
 }
 
 /* Left and right label styling for non-Formidable styling */
@@ -270,7 +270,7 @@
 .frm_form_field.frm_left_container{
 	display: grid;
 	grid-template-columns: 25% auto;
-	width:100%;
+	width: 100%;
 	grid-auto-rows: min-content;
 }
 
@@ -285,30 +285,30 @@
 .frm_form_field.frm_inline_container .frm_primary_label,
 .frm_form_field.frm_right_container .frm_primary_label,
 .frm_form_field.frm_left_container .frm_primary_label{
-	margin-right:10px;
-	grid-row:span 2/span 2;
-	padding-top:4px;
+	margin-right: 10px;
+	grid-row: span 2/span 2;
+	padding-top: 4px;
 }
 
 .frm_form_field.frm_left_container .frm_primary_label{
-	grid-column:1;
-	grid-row:span 2/span 2; /* cover a row for the description */
+	grid-column: 1;
+	grid-row: span 2/span 2; /* cover a row for the description */
 }
 
 .frm_form_field.frm_right_container .frm_primary_label{
-	grid-column:2;
-	grid-row:1;
-	margin-right:0;
-	margin-left:10px;
+	grid-column: 2;
+	grid-row: 1;
+	margin-right: 0;
+	margin-left: 10px;
 }
 
 .frm_form_field.frm_inline_container .frm_description,
 .frm_form_field.frm_left_container .frm_description{
-	grid-column:2;
+	grid-column: 2;
 }
 
 .frm_form_field.frm_right_container .frm_description{
-	grid-column:1;
+	grid-column: 1;
 }
 
 .frm_conf_field.frm_left_container{
@@ -316,7 +316,7 @@
 }
 
 .frm_conf_field.frm_left_container .frm_description{
-	grid-column:1;
+	grid-column: 1;
 }
 
 /* End RTL Grids */
@@ -328,13 +328,21 @@
 }
 
 @keyframes spin {
-	0% { transform: rotate(0deg); }
-	100% { transform: rotate(360deg); }
+	0% {
+transform: rotate(0deg);
+}
+	100% {
+transform: rotate(360deg);
+}
 }
 
 @keyframes fadeIn {
-   0% {opacity: 0;}
-   100% {opacity: 1;}
+   0% {
+opacity: 0;
+}
+   100% {
+opacity: 1;
+}
 }
 
 @media only screen and (max-width: 750px) {
@@ -355,6 +363,6 @@
 	.frm_form_field.frm_inline_container,
 	.frm_form_field.frm_right_container,
 	.frm_form_field.frm_left_container{
-		display:block;
+		display: block;
 	}
 }
