--- a/css/frm_overlay.css
+++ b/css/frm_overlay.css
@@ -1,10 +1,11 @@
 .frm-overlay--wrapper {
 	position: absolute;
-	top: 0; left: 0;
+	top: 0;
+left: 0;
 	width: 100%;
 	min-height: 100%;
 	z-index: 1002;
-	color:white;
+	color: white;
 }
 .frm-overlay--wrapper:before {
 	content: '';
@@ -19,16 +20,17 @@
 }
 .frm-overlay--close {
 	position: absolute;
-	top: 32px; right: 32px;
-	z-index:10;
-	display:block;
+	top: 32px;
+right: 32px;
+	z-index: 10;
+	display: block;
 	width: 32px;
 	height: 32px;
 	background: url( '../images/overlay/close-overlay.svg' ) no-repeat;
 	cursor: pointer;
 }
 body.admin-bar:not(.frm-full-screen) .frm-overlay--close {
-	top:40px;
+	top: 40px;
 }
 .frm-overlay--container {
 	text-align: center;
@@ -38,7 +40,7 @@ body.admin-bar:not(.frm-full-screen) .frm-overlay--close {
 	right: 0;
 	bottom: 0;
 	margin: auto;
-	z-index:8;
+	z-index: 8;
 	max-width: 468px;
 	height: 260px;
 }
