Pro issue 4946 / Hide notices on import/export page

--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -2607,6 +2607,7 @@ h2.frm-h2 + .howto {
 #wpbody-content > .error:not(.frm_previous_install),
 .frm-white-body .updated,
 .frm-white-body .notice,
+.frm_wrap > .wrap > .notice,
 .frm-white-body .error:not(.frm_previous_install)
 {
 	display: none;
