--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -6166,6 +6166,11 @@ span.howto {
 	text-align: start;
 }
 
+.frm_form_action_settings .frm_email_row .frm_remove_field svg {
+	position: relative;
+	bottom: 2px;
+}
+
 /* Entries Page */
 .frm_no_entries_form {
 	padding: 60px 0;
