--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -5930,6 +5930,15 @@ p.frm-inline-select,
 	margin-right: 4px;
 }
 
+.frm-single-settings .frm_single_option .frm_remove_tag {
+	position: relative;
+	bottom: 3px;
+}
+
+.frm-single-settings .frm_single_option .frm_remove_tag:before {
+	content: "";
+}
+
 .advanced_settings .frm_logic_row {
 	margin: 14px 0;
 }
