--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -1603,6 +1603,10 @@ input.frm_insert_in_template {
 }
 
 /* Generic Classes */
+.frm-text-grey-700 {
+	color: var(--grey-700);
+}
+
 .frm-text-grey-900 {
 	color: var(--grey-900);
 }
@@ -1719,6 +1723,10 @@ input.frm_insert_in_template {
 	padding: var(--gap-md) !important;
 }
 
+.frm-p-xl {
+	padding: var(--gap-xl) !important;
+}
+
 .frm-px-0 {
 	padding-left: 0 !important;
 	padding-right: 0 !important;
@@ -1727,6 +1735,11 @@ input.frm_insert_in_template {
 .frm-py-0 {
 	padding-top: 0 !important;
 	padding-bottom: 0 !important;
+}
+
+.frm-py-2xs {
+	padding-top: var(--gap-2xs) !important;
+	padding-bottom: var(--gap-2xs) !important;
 }
 
 .frm-pt-sm {
@@ -1778,6 +1791,22 @@ input.frm_insert_in_template {
 
 .frm-font-semibold {
 	font-weight: 600 !important;
+}
+
+.frm-truncate {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+
+[class*="frm-line-clamp-"] {
+	overflow: hidden;
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+}
+
+.frm-line-clamp-2 {
+	-webkit-line-clamp: 2;
 }
 
 .frm-rounded-sm {
@@ -2384,35 +2413,6 @@ h2.frm-h2 + .howto {
 	margin: 5px 0 20px;
 }
 
-.frm-admin-page-addons #frm-using-lite {
-	display: none;
-}
-
-.frm-admin-page-addons .frm-search {
-	margin-top: 0;
-}
-
-.frm-addons {
-	margin-top: var(--gap-lg);
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
-	grid-gap: var(--gap-md);
-}
-
-.frm-addons,
-.frm-addons h2,
-.frm-addons h3 {
-	color: var(--grey-700);
-}
-
-.frm-addons h2 {
-	font-size: 17px;
-}
-
-.frm-addons h3 {
-	margin-top: 0;
-}
-
 /* Card Components */
 .frm-card {
 	width: 100%;
@@ -2551,10 +2551,6 @@ h2.frm-h2 + .howto {
 .plugin-card-pro.frm-addon-active .button,
 .plugin-card-pro.frm-addon-active .frm-button-tertiary {
 	display: none !important;
-}
-
-#frm-addons-page .frm-addon-button {
-	opacity: 1 !important;
 }
 
 .frm-save-and-reload-options {
@@ -8032,6 +8028,16 @@ body[class*=formidable-payments] .ui-widget-overlay {
 	color: var(--success-500);
 }
 
+.frm-border-icon {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 40px;
+	height: 40px;
+	border: 1px solid var(--grey-300);
+	border-radius: var(--small-radius);
+}
+
 .frm-upgrade-message img {
 	max-width: 100%;
 }
@@ -9475,7 +9481,8 @@ Responsive Design
 
 .frm-cta h4 {
 	font-weight: 600;
-	margin: 0;
+	margin-top: 0;
+	margin-bottom: var(--gap-2xs);
 }
 
 .frm-cta-green {
