--- a/css/admin/addons-page.css
+++ b/css/admin/addons-page.css
@@ -35,3 +35,34 @@
 #frm-addons-page .frm-addon-button {
 	display: none;
 }
+
+.frm-addon-error {
+	border-radius: 0;
+	background-color: var(--error-100);
+	left: 0;
+	right: 0;
+}
+
+.frm-addon-error p {
+	color: var(--grey-900);
+}
+
+.frm_loading_button ~ .frm_toggle .frm_toggle_slider {
+	opacity: 0.7;
+	pointer-events: none;
+	background: linear-gradient(90deg, var(--grey-200) 25%, var(--grey-300) 50%, var(--grey-200) 75%);
+    background-size: 400% 100%;
+    animation: skeleton-animation 3s infinite ease-in-out;
+}
+
+@keyframes skeleton-animation {
+    0% {
+        background-position: 0% 0%;
+    }
+    50% {
+        background-position: 100% 100%;
+    }
+	100% {
+        background-position: 0% 0%;
+    }
+}
