--- a/css/admin/addons-page.css
+++ b/css/admin/addons-page.css
@@ -38,6 +38,10 @@
 	color: var(--grey-800);
 }
 
+.plugin-card-formidable-pro.frm-addon-active .frm_toggle_block {
+	pointer-events: none;
+}
+
 #frm-addons-page .frm-addon-button {
 	display: none;
 }
